--- a/app/src/main/res/menu/drive_report_nav.xml
+++ b/app/src/main/res/menu/drive_report_nav.xml
@@ -14,11 +14,11 @@
         android:icon="@drawable/ic_baseline_analytics_24"
         android:title="@string/stats"
         app:showAsAction="withText" />
-    <item
-        android:id="@+id/nav_rank"
-        android:enabled="false"
-        android:icon="@drawable/ic_baseline_leaderboard_24"
-        android:title="@string/rank"
+<!--    <item-->
+<!--        android:id="@+id/nav_rank"-->
+<!--        android:enabled="false"-->
+<!--        android:icon="@drawable/ic_baseline_leaderboard_24"-->
+<!--        android:title="@string/rank"-->
 
-        app:showAsAction="withText" />
+<!--        app:showAsAction="withText" />-->
 </menu>
